syntax = "proto3";
package spn.profile;

import "gogoproto/gogo.proto";
import "spn/profile/validator.proto";
import "spn/profile/coordinator.proto";

option go_package = "github.com/tendermint/spn/x/profile/types";

// GenesisState defines the profile module's genesis state.
message GenesisState {
  repeated Validator                  validators                  = 1 [(gogoproto.nullable) = false];
  repeated ValidatorByOperatorAddress validatorsByOperatorAddress = 2 [(gogoproto.nullable) = false];
  repeated Coordinator                coordinators                = 3 [(gogoproto.nullable) = false];
  uint64                              coordinatorCounter          = 4;
  repeated CoordinatorByAddress       coordinatorsByAddress       = 5 [(gogoproto.nullable) = false];
}
